chore: add eureka service discovery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Server Configuration
 server.port=8081
 spring.application.name=member-microservice
@@ -22,12 +21,7 @@ spring.h2.console.path=/h2-console
 # Logging
 logging.level.com.gym.member_microservice=DEBUG
 logging.level.org.springframework.web=DEBUG
-=======
-spring.application.name=miembro
-spring.datasource.url=jdbc:h2:mem:miembrodb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=truespring.application.name=member-microservice
->>>>>>> ff59da0ea3e1dea1721549f8080cac88b101996f
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
