ci: update pom.xml and Dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<groupId>com.gym</groupId>
 		<artifactId>gym-microservices-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../parent</relativePath>
+		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.gym</groupId>
@@ -17,7 +17,6 @@
 	<name>member-microservice</name>
 	<description>Memebers managment microservice</description>
 
-	<!-- Repositories for GitHub Packages -->
 	<repositories>
 		<repository>
 			<id>gym-microservices-releases</id>
@@ -26,6 +25,10 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.gym</groupId>
+			<artifactId>gym-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -39,8 +42,21 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		</dependency>
 	</dependencies>
 
